fix bugs on mobile hmaburger navbar

--- a/style.css
+++ b/style.css
@@ -184,10 +184,6 @@ body::before {
 .hamburger {
     display: none;
     cursor: pointer;
-    position: fixed;
-    top: 1.5rem;
-    right: 10%;
-    z-index: 1001;
 }
 
 .hamburger span {
@@ -201,20 +197,26 @@ body::before {
 
 /* --- RESPONSIVE --- */
 @media (max-width: 768px) {
+    .navbar{
+        padding: 1.5rem 5%;
+    }
     #main-nav {
         display: none;
         position: absolute;
-        top: 80px;
+        top: 60px;
         left: 0;
         width: 100%;
         background: rgba(10, 15, 26, 0.95);
         border-top: 1px solid var(--glass-border);
     }
-
-    #main-nav.active {
+    .hamburger.active + #main-nav {
         display: flex;
         flex-direction: column;
         align-items: center;
+    }
+
+    body.menu-open{
+        overflow: hidden;
     }
 
     #main-nav ul {
